2005-10-03  Derek Price  <derek@ximbiot.com>

	* NEWS: Note ZLib security issues.

2005-09-30  Derek Price  <derek@ximbiot.com>

	* NEWS: Mention Conrad's Windows client fix.

2005-09-28  Derek Price  <derek@ximbiot.com>

	* NEWS: Consolidate TmpDir with the other new config keys.

2005-09-26  Derek Price  <derek@ximbiot.com>

	* NEWS: Note FreeBSD 5.x GSSAPI fix.

	* NEWS: Note fsync'd commits.

2005-09-25  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add files (lib\getdelim.h lib\setenv.h) to project.

	* cvsnt.dep: Regenerated for "cvsnt.dsp" changes.

2005-09-24  Derek Price  <derek@ximbiot.com>

	* NEWS, HACKING: Standardize on Automake 1.9.6.

2005-09-22  Derek Price  <derek@ximbiot.com>

	* NEWS: Mention conflict fixes.

2005-09-20  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add files (lib\canon-host.h lib\glob-libc.h) to project.

	* cvsnt.dep: Regenerated for "cvsnt.dsp" changes.

2005-09-19  Derek Price  <derek@ximbiot.com>

	* maint-aux/gnulib-update: Default $GNULIB path rather than setting.
	Check for error return from gnulib-tool before expecting results.

2005-09-13  Derek Price  <derek@ximbiot.com>

	* TESTS: Mention new $username8 & $anyusername variables.

2005-09-06  Derek Price  <derek@ximbiot.com>

	* TESTS: Reword slightly.  s/\$PROG/\$CPROG/.  Document $tempfile &
	$tempname.

	* NEWS: Note Kerberos4 build fix.

2005-09-05  Derek Price  <derek@ximbiot.com>

	* NEWS: Note TmpDir config key.  Reorder config news items.  Reword
	the [root] specification item.

	* configure.in (--enable-config-override): Verify $prefix is set before
	expanding $sysconfdir.

2005-09-04  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove putenv cruft.

	* maint-aux/gnulib-modules: Add glob.

	* NEWS: Note new [root] specification in config files.

	* configure.in: Remove unneeded search for hstrerror.
	* maint-aux/gnulib-modules: Add canon-host.

2005-09-04  Larry Jones  <lawrence.jones@ugs.com>

	* NEWS: s/bug-cvs@gnu.org/bug-cvs@nongnu.org/.