@@ -1,214 +1,0 @@
-build-aux/config.rpath
-doc/getdate.texi
-lib/allocsa.c
-lib/allocsa.h
-lib/allocsa.valgrind
-lib/asnprintf.c
-lib/asprintf.c
-lib/atexit.c
-lib/basename.c
-lib/canon-host.c
-lib/canon-host.h
-lib/canonicalize.c
-lib/canonicalize.h
-lib/closeout.c
-lib/closeout.h
-lib/dirname.c
-lib/dirname.h
-lib/dup2.c
-lib/error.c
-lib/error.h
-lib/exitfail.c
-lib/exitfail.h
-lib/exit.h
-lib/fnmatch.c
-lib/fnmatch_.h
-lib/fnmatch_loop.c
-lib/ftruncate.c
-lib/getdate.h
-lib/getdate.y
-lib/gethostname.c
-lib/getline.c
-lib/getline.h
-lib/getlogin_r.c
-lib/getlogin_r.h
-lib/getndelim2.c
-lib/getndelim2.h
-lib/getnline.c
-lib/getnline.h
-lib/getopt1.c
-lib/getopt.c
-lib/getopt_.h
-lib/getopt_int.h
-lib/getpagesize.h
-lib/getpass.c
-lib/getpass.h
-lib/gettime.c
-lib/gettimeofday.c
-lib/glob.c
-lib/glob_.h
-lib/glob-libc.h
-lib/lstat.c
-lib/lstat.h
-lib/malloc.c
-lib/md5.c
-lib/md5.h
-lib/memmove.c
-lib/minmax.h
-lib/mkdir.c
-lib/mkstemp.c
-lib/mktime.c
-lib/nanosleep.c
-lib/pagealign_alloc.c
-lib/pagealign_alloc.h
-lib/pathmax.h
-lib/printf-args.c
-lib/printf-args.h
-lib/printf-parse.c
-lib/printf-parse.h
-lib/quotearg.c
-lib/quotearg.h
-lib/readlink.c
-lib/realloc.c
-lib/regcomp.c
-lib/regex.c
-lib/regexec.c
-lib/regex.h
-lib/regex_internal.c
-lib/regex_internal.h
-lib/rename.c
-lib/save-cwd.c
-lib/save-cwd.h
-lib/setenv.c
-lib/setenv.h
-lib/stat-macros.h
-lib/stdbool_.h
-lib/stdint_.h
-lib/strcasecmp.c
-lib/strcase.h
-lib/strdup.c
-lib/strdup.h
-lib/strerror.c
-lib/strftime.c
-lib/strftime.h
-lib/stripslash.c
-lib/strncasecmp.c
-lib/strstr.c
-lib/strstr.h
-lib/strtoul.c
-lib/tempname.c
-lib/time_r.c
-lib/time_r.h
-lib/timespec.h
-lib/unlocked-io.h
-lib/unsetenv.c
-lib/vasnprintf.c
-lib/vasnprintf.h
-lib/vasprintf.c
-lib/vasprintf.h
-lib/xalloc-die.c
-lib/xgethostname.c
-lib/xgethostname.h
-lib/xreadlink.c
-lib/xreadlink.h
-lib/xsize.h
-lib/yesno.c
-lib/yesno.h
-m4/allocsa.m4
-m4/atexit.m4
-m4/bison.m4
-m4/canon-host.m4
-m4/canonicalize.m4
-m4/clock_time.m4
-m4/closeout.m4
-m4/codeset.m4
-m4/dirname.m4
-m4/dos.m4
-m4/d-type.m4
-m4/dup2.m4
-m4/eealloc.m4
-m4/eoverflow.m4
-m4/error.m4
-m4/exitfail.m4
-m4/extensions.m4
-m4/fnmatch.m4
-m4/ftruncate.m4
-m4/getdate.m4
-m4/gethostname.m4
-m4/getline.m4
-m4/getlogin_r.m4
-m4/getndelim2.m4
-m4/getnline.m4
-m4/getopt.m4
-m4/getpagesize.m4
-m4/getpass.m4
-m4/gettext.m4
-m4/gettime.m4
-m4/gettimeofday.m4
-m4/glibc21.m4
-m4/glibc2.m4
-m4/glob.m4
-m4/iconv.m4
-m4/intdiv0.m4
-m4/intmax.m4
-m4/intmax_t.m4
-m4/inttypes_h.m4
-m4/inttypes.m4
-m4/inttypes-pri.m4
-m4/isc-posix.m4
-m4/lcmessage.m4
-m4/longdouble.m4
-m4/longlong.m4
-m4/lstat.m4
-m4/mbrtowc.m4
-m4/mbstate_t.m4
-m4/md5.m4
-m4/memmove.m4
-m4/minmax.m4
-m4/mkdir-slash.m4
-m4/mkstemp.m4
-m4/mktime.m4
-m4/mmap-anon.m4
-m4/nanosleep.m4
-m4/nls.m4
-m4/onceonly_2_57.m4
-m4/pagealign_alloc.m4
-m4/pathmax.m4
-m4/po.m4
-m4/printf-posix.m4
-m4/progtest.m4
-m4/quotearg.m4
-m4/readlink.m4
-m4/regex.m4
-m4/rename.m4
-m4/restrict.m4
-m4/save-cwd.m4
-m4/setenv.m4
-m4/signed.m4
-m4/size_max.m4
-m4/stat-macros.m4
-m4/stdbool.m4
-m4/stdint_h.m4
-m4/stdint.m4
-m4/strcase.m4
-m4/strdup.m4
-m4/strerror.m4
-m4/strerror_r.m4
-m4/strftime.m4
-m4/strstr.m4
-m4/strtoul.m4
-m4/time_r.m4
-m4/timespec.m4
-m4/tm_gmtoff.m4
-m4/tzset.m4
-m4/uint32_t.m4
-m4/uintmax_t.m4
-m4/ulonglong.m4
-m4/unlocked-io.m4
-m4/vasnprintf.m4
-m4/vasprintf.m4
-m4/wchar_t.m4
-m4/wint_t.m4
-m4/xreadlink.m4
-m4/xsize.m4
-m4/yesno.m4
