@@ -1,66 +1,0 @@
-gettext
-vasnprintf
-regex
-atexit
-save-cwd
-dirname
-error
-exit
-exitfail
-extensions
-fnmatch-posix
-fnmatch
-mkstemp
-getopt
-stdbool
-getline
-getnline
-getndelim2
-gethostname
-strcase
-getpass-gnu
-gettimeofday
-timespec
-gettime
-unlocked-io
-tzset
-restrict
-time_r
-mktime
-minmax
-memmove
-nanosleep
-lstat
-strerror
-vasprintf
-malloc
-realloc
-strftime
-xsize
-getpagesize
-md5
-stdint
-yesno
-allocsa
-setenv
-getdate
-readlink
-xreadlink
-xgethostname
-mkdir
-rename
-dup2
-strstr
-ftruncate
-strtoul
-pathmax
-xalloc-die
-pagealign_alloc
-closeout
-strdup
-canonicalize
-getlogin_r
-stat-macros
-quotearg
-canon-host
-glob
