@@ -16,24 +16,15 @@
 # along with this program; if not, write to the Free Software Foundation,
 # Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
-if test -f maint-aux/gnulib-modules; then :; else
+if test -f maint-aux/gnulib-update; then :; else
   >&2 echo \
 "This script expects to be run from the top level of the CVS source tree."
-  exit 2
-fi
-
-if test -f maint-aux/gnulib-modules; then :; else
-  >&2 echo \
-"Failed to find the modules list (\`maint-aux/gnulib-modules')."
   exit 2
 fi
 
 # Where to find the GNULIB sources.
 : ${GNULIB="../gnulib"}
 GNULIB_TOOL=$GNULIB/gnulib-tool
-
-# Which modules to update.
-MODULES=`cat maint-aux/gnulib-modules`
 
 # Are the GNULIB sources really where we expect them?
 if test -r $GNULIB && test -d $GNULIB \
@@ -60,7 +51,7 @@ mv lib/Makefile.am lib/Makefile.am.save
 mv m4/error.m4 m4/error.m4.save
 
 # Run the update.
-if $GNULIB_TOOL --import $MODULES >/dev/null; then :; else
+if $GNULIB_TOOL --import >/dev/null; then :; else
   exit $?
 fi
 
@@ -76,7 +67,7 @@ else
 fi
 
 # Extract the names of the files we imported.
-$GNULIB_TOOL --extract-filelist $MODULES |sort |uniq |sed '/^$/d' \
+$GNULIB_TOOL --extract-filelist |sort |uniq |sed '/^$/d' \
 	>maint-aux/gnulib-filelist.new
 
 # Warn the user if the filelist has changed.
